--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -8,6 +8,7 @@ jobs:
     name: Say hello to user
     runs-on: ubuntu-latest
     steps:
+      - run: exit 1
       - name: run echo
         run: echo "Hello World!" 
   
